--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-    <script src="js/main.js"></script>
 </head>
 <body>
-    <h1> Hello, World </h1>
+    <h1 id="foo" onclick="change()"> Hello, World </h1>
+    <p>
+        Number 1: <input type="text" id="num1">
+    </p>
+    <p>
+        Number 2: <input type="text" id="num2">
+    </p>
+    <p>
+        <button id="add" onclick="addNums()">Click to add Number and Number 2</button>
+    </p>
+    <p id="result">Result here</p>
+    <script src="js/main.js"></script>
 </body>
 </html>
